[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Levels/Level1/Level1_SFX.gd" type="Script" id=1]
[ext_resource path="res://Assets/SFX/Ambient/Helicopter_passing_by.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/SFX/Ambient/Noise_1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/SFX/Ambient/Wind.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5231, 19.8009 )

[node name="Level1_SFX" type="Node2D"]
visible = false
script = ExtResource( 1 )

[node name="Wind" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
autoplay = true

[node name="HeliSoundArea" type="Area2D" parent="."]

[node name="HeliCollisionShape2D" type="CollisionShape2D" parent="HeliSoundArea"]
position = Vector2( 811.865, 298.282 )
scale = Vector2( 11.68, 21.56 )
shape = SubResource( 1 )

[node name="HeliSound" type="AudioStreamPlayer" parent="HeliSoundArea"]
stream = ExtResource( 2 )
volume_db = 10.0

[node name="Noise_1_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Noise_1_area"]
position = Vector2( 2150.06, 602.197 )
scale = Vector2( 11.68, 21.56 )
shape = SubResource( 1 )

[node name="Noise_1_sound" type="AudioStreamPlayer" parent="Noise_1_area"]
stream = ExtResource( 3 )
volume_db = 5.0
[connection signal="body_entered" from="HeliSoundArea" to="." method="_on_HelicopterSoundArea_body_entered"]
[connection signal="body_entered" from="Noise_1_area" to="." method="_on_Noise1_body_entered"]
